plugins {
    id 'base'   // root is just a container, no jar
}

subprojects {
    group = 'dev.stemcraft'
    version = "1.0.0-SNAPSHOT"

    repositories {
        mavenCentral()
        maven {
            name = "papermc-repo"
            url = "https://repo.papermc.io/repository/maven-public/"
        }
    }

    plugins.withId("java") {
        java {
            toolchain.languageVersion = JavaLanguageVersion.of(21)
        }

        tasks.withType(JavaCompile).configureEach {
            options.encoding = 'UTF-8'
        }
    }
}
